added nav link for home

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 </header>
 <% if @current_user %>
   <div class="nav">
+    <%= link_to 'Home', dashboard_path, class: 'nav-button' %>
     <%= link_to 'Servers', servers_path, class: 'nav-button' %>
     <%= link_to 'Shop', shop_path, class: 'nav-button' %>
     <%= link_to 'Game', game_path, class: 'nav-button' %>
