--- a/app/views/games/addnew.html.erb
+++ b/app/views/games/addnew.html.erb
@@ -1,1 +1,24 @@
 
+<div class=".container">
+  <h1>Create New Server</h1>
+  <%= form_tag create_path, method: :post do %>
+    <div>
+      <%= label_tag 'user[username]', @current_user.username %>
+
+    </div>
+
+    <div>
+      <%= label_tag 'game.name', 'Server Name' %>
+      <%= text_field_tag 'game.name', nil, required: true %>
+    </div>
+
+
+
+
+    <div>
+      <%= submit_tag 'Create', class: 'btn' %>
+      <%= link_to 'Back', servers_path, class: 'btn' %>
+    </div>
+  <% end %>
+</div>
+
