Implemented functionality for creating games with the addnew view.

--- a/app/views/games/addnew.html.erb
+++ b/app/views/games/addnew.html.erb
@@ -8,8 +8,8 @@
     </div>
 
     <div>
-      <%= label_tag 'game.name', 'Server Name' %>
-      <%= text_field_tag 'game.name', nil, required: true %>
+      <%= label_tag 'server_name', 'Server Name' %>
+      <%= text_field_tag 'server_name', nil, required: true %>
     </div>
 
 
