--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -28,6 +28,6 @@
     </tbody>
   </table>
 
-  <%= link_to 'Add', logout_path, class: 'button' %>
-  <%= link_to 'Create', create_path, class: 'button' %>
+  <%= link_to 'Add Existing', logout_path, class: 'button' %>
+  <%= link_to 'Create New', new_path, class: 'button' %>
 </div>
