Added validation for name already being used, fixed a path error for new games.

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -29,5 +29,5 @@
   </table>
 
   <%= link_to 'Add Existing', logout_path, class: 'button' %>
-  <%= link_to 'Create New', new_path, class: 'button' %>
+  <%= link_to 'Create New', new_game_path, class: 'button' %>
 </div>
