--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
   <div class="nav">
     <%= link_to 'Servers', games_path, class: 'nav-button' %>
     <%= link_to 'Shop', shop_path, class: 'nav-button' %>
-    <%= link_to 'Game', servers_path, class: 'nav-button' %>
+    <%= link_to 'Game', games_path, class: 'nav-button' %>
     <%= link_to 'Logout', logout_path, method: :delete, class: 'nav-button' %>
   </div>
   <h1 class="center-container">
