--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class=".container">
   <h1>Create New Server</h1>
-  <%= form_tag create_path, method: :post do %>
+  <%= form_tag games_path, method: :post do %>
     <div>
       <%= label_tag 'user[username]', @current_user.username %>
 
@@ -17,7 +17,7 @@
 
     <div>
       <%= submit_tag 'Create', class: 'btn' %>
-      <%= link_to 'Back', servers_path, class: 'btn' %>
+      <%= link_to 'Back', games_path, class: 'btn' %>
     </div>
   <% end %>
 </div>
