Created page to search for games to join and method to add to games list.

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -28,6 +28,6 @@
     </tbody>
   </table>
 
-  <%= link_to 'Add Existing', logout_path, class: 'button' %>
+  <%= link_to 'Add Existing', list_games_path, class: 'button' %>
   <%= link_to 'Create New', new_game_path, class: 'button' %>
 </div>
