--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= "4/6" %></td>
         <td>
           <% if 4 < 6 %>
-            <%= button_to 'Join', logout_path, method: :post %>
+            <%= link_to 'Join', game_path(game), class: 'button' %>
           <% else %>
             <span>Full</span>
           <% end %>
