--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,7 +2,7 @@
   <h1 style="text-align: center">Admin Dashboard</h1>
 
   <div style="display: flex; justify-content: center; align-items: center; position: relative; margin-bottom: 20px;">
-    <%= link_to 'Add User', dashboard_path, class: 'btn', style: 'position: absolute; left: 0;' %>
+    <%= link_to 'Add User', add_user_path, class: 'btn', style: 'position: absolute; left: 0;' %>
     <h2 style="margin: 0;">All Users</h2>
   </div>
   <table>
