--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,10 @@
-<div class=".container">
-  <h1>I am the page for <%=@game.name%></h1>
+<div class="game-container">
+  <%= render 'shop' %>
+  <%= render 'main' %>
+  <%= render 'chat' %>
 </div>
+
+<script>
+
+</script>
+
