--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,3 @@
 <div class=".container">
-  <h1>I am the page for <%=@game.name%></h1>
+  <h1>I am the page for <%=@current_game.name%></h1>
 </div>
