--- a/app/views/games/list.html.erb
+++ b/app/views/games/list.html.erb
@@ -1,22 +1,23 @@
-<div class=".container">
-  <h1>Join an existing server</h1>
+<div class="form-container wide-form-container">
+  <h1>Join an Existing Server</h1>
   <%= form_tag list_games_path, method: :get do %>
-    <div>
-      <%= label_tag 'server_name', 'Server Name' %>
-      <%= text_field_tag 'server_name', @search, required: true %>
-      <%= submit_tag 'Search', class: 'btn' %>
+    <div class="form-group">
+      <%= label_tag 'server_name', 'Server Name', class: 'form-label' %>
+      <%= text_field_tag 'server_name', @search, required: true, class: 'input-field' %>
+      <%= submit_tag 'Search', class: 'btn', style: 'margin-top: 10px' %>
     </div>
   <% end %>
-  <table>
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Host</th>
-      <th>Add to server list</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% if @found_games %>
+
+  <% if @found_games && @found_games.any? %>
+    <table class="styled-table">
+      <thead>
+      <tr>
+        <th>Server Name</th>
+        <th>Host</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody>
       <% @found_games.each do |game| %>
         <tr>
           <td><%= game.name %></td>
@@ -26,11 +27,13 @@
           </td>
         </tr>
       <% end %>
-    <% end %>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  <% else %>
+    <p class="no-results">No games found. Please try a different search.</p>
+  <% end %>
 
-  <div>
+  <div class="button-group">
     <%= link_to 'Back', games_path, class: 'btn' %>
   </div>
 </div>
