--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,66 @@
-<div class=".container">
-  <h1>I am the page for <%=@game.name%></h1>
+<div>
+  <table>
+    <% (-3..3).each do |y| %>
+      <tr>
+        <% (-3..3).each do |x| %>
+          <td style="background-color: <%= @cell_colors[[x, y]] || 'white' %>;">
+            <div class="content">
+              <button
+                class="cell-button"
+                onclick="clickCell(<%= x %>, <%= y %>, '<%= @cell_colors[[x, y]] %>')">
+              </button>
+            </div>
+          </td>
+        <% end %>
+      </tr>
+    <% end %>
+  </table>
 </div>
+
+<script>
+    const biome_map = {
+        yellow: 'desert',
+        gray: 'mountain',
+        green: 'forest',
+        blue: 'ocean'
+    }
+
+    function clickCell(x, y, color) {
+        console.log("Point: ", x, y);
+        console.log("Biome: ", biome_map[color]);
+    }
+</script>
+
+<style>
+    table {
+        max-width: 500px; /* Set a maximum size for the table */
+        margin: 0 auto; /* Center the table */
+        border-collapse: collapse; /* Keep the borders clean */
+    }
+
+    td {
+        width: 14.3%; /* 1/7th of the table width for even columns */
+        border: 2px solid black;
+        position: relative;
+    }
+
+    td .content {
+        aspect-ratio: 1 / 1; /* Maintain square cells */
+        width: 100%; /* Fill the parent td */
+    }
+
+    .cell-button {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: transparent; /* Make the button invisible */
+        border: none; /* Remove default button border */
+        cursor: pointer; /* Make it clickable */
+    }
+
+    .cell-button:hover {
+        background-color: rgba(0, 0, 0, 0.1); /* Optional: Add a hover effect */
+    }
+</style>
